<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:prg="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/rg.noPadding" >
	<LinearLayout
	    android:id="@+id/newStepLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <EditText
	        android:id="@+id/stepTitle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="6dp"
	        android:ems="10"
	        android:hint="@string/step_title"
	        android:singleLine="false" >
	
	        <requestFocus />
	    </EditText>
	
	    <TextView
			style="@style/rg.wideBar"
	        android:text="@string/step_recurrency" />
	
	    <TextView
	        android:id="@+id/stepType"
	        style="@style/rg.textList"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/listViewHeight"
	        android:gravity="center_vertical"
	        android:hint="Step type"
	        android:paddingBottom="0dp"
	        android:paddingTop="0dp" />
	
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/stepRecurrencyLW"
	        android:orientation="vertical"
	        android:paddingTop="0dp"
	        android:paddingBottom="0dp" >
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/stepDeadlineLW"
	        android:orientation="vertical" >
	    </LinearLayout>
	    <TextView
			style="@style/rg.wideBar"
	        android:text="@string/relevance" />

	    <com.krueg.questgiver.views.IntegerWithLabelView
	        android:id="@+id/relevanceView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        prg:label="@string/relevance"
	        prg:value="5"
	         >
	    </com.krueg.questgiver.views.IntegerWithLabelView>
	    
	    <com.krueg.questgiver.views.StepGroupPicker
          android:id="@+id/relevanceViewForGroups"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:visibility="gone"
          prg:label="@string/relevance"
          prg:value="1"
      >
      </com.krueg.questgiver.views.StepGroupPicker>
	
	</LinearLayout>
</ScrollView>